plugins {
  id 'java'
  id 'org.springframework.boot' version '3.5.6'
  id 'io.spring.dependency-management' version '1.1.7'
}

group = 'asw.efood'
// version = '0.0.1-SNAPSHOT'

java {
  toolchain {
    languageVersion = JavaLanguageVersion.of(21)
  }
}

configurations {
  compileOnly {
    extendsFrom annotationProcessor
  }
}

repositories {
  mavenCentral()
}

dependencies {
  implementation 'org.springframework.boot:spring-boot-starter-web'
  implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
  implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
  compileOnly 'org.springframework.boot:spring-boot-starter-aop'
  implementation 'org.springframework.boot:spring-boot-starter-actuator'

  compileOnly 'org.projectlombok:lombok'
  annotationProcessor 'org.projectlombok:lombok'

  implementation 'org.hsqldb:hsqldb'

  testImplementation 'org.springframework.boot:spring-boot-starter-test' 
  testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

//tasks.withType(JavaCompile) {
//  options.compilerArgs << '-Xlint:unchecked'
//  options.deprecation = true
//}

tasks.named('test') {
  useJUnitPlatform()
  jvmArgs(['-XX:+EnableDynamicAgentLoading', '-Xshare:off'])
}
